Edit json.js date format

--- a/css/iphone.css
+++ b/css/iphone.css
@@ -25,7 +25,7 @@ textarea    {
 }
 
 #home-button a  {
-    background: #858384;
+    background: #0d726f;
     color: #292929;
     font-family: GurmukhiMN-Bold;
     font-size: 25px;
