--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,8 @@ textarea:focus {
     height:35px;
     font-size: 20px;
     color: white;
-    width:100px;
+    width:120px;
+    text-align: center;
     display:inline;
     margin-right: 5px;
     border-color: #0d726f;
