--- a/css/iphone.css
+++ b/css/iphone.css
@@ -8,8 +8,8 @@ header  {
 }
 
 h1  {
-    font-family: GurmukhiMN-Bold;
-    font-size: 32px;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 33px;
     padding-top: 13px;
 }
 
@@ -30,10 +30,6 @@ textarea    {
     font-family: GurmukhiMN-Bold;
     font-size: 25px;
     height: 35px;
-}
-
-#home-container {
-    margin: 10px 25px 10px 25px;
 }
 
 #items  {
