--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1      {
     width:auto;
     padding:10px 10px 10px 10px;
 }
-input      {
+#add-item input      {
     height: 20px;
     margin: 10px 0px 10px 0px;
     border: 4px solid #528786;
@@ -44,7 +44,33 @@ input      {
     border-radius: 0px;
 }
 
-input:focus {
+#bgSearch {
+    background: #0d726f;
+    width: 200px;
+    margin: -10px auto 0px auto;
+    padding: 10px;
+    -moz-box-shadow: inset .5px .5px 3px .5px #000;
+    -webkit-box-shadow: inset .5px .5px 3px .5px #000;    
+    box-shadow: inset .5px .5px 3px .5px #000;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+}
+
+ #bgSearch input {
+    border: 3px solid #528786;
+    background: #292929;
+    color: white;
+    width: 100px;
+    height: 20px;
+    font-size: 18px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    font-family: "Arial Black", Gadget, sans-serif;
+}
+
+#add-item input:focus {
     outline-color: white;
 }
 
@@ -97,6 +123,16 @@ fieldset    {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
+}
+
+#title a {
+    margin: 0px;
+    padding: 0px;
+    background: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    display: block;
 }
 
 legend  {
@@ -180,14 +216,6 @@ a   {
     font-size:20px;
 }
 
-a:hover {
-    opacity: .7;
-}
-
-a:active {
-    opacity: .7;
-}
-
 #errors {
     color:#D9343C;
 }
@@ -195,10 +223,23 @@ a:active {
 #home-button a  { 
     padding:18px 18px 10px 18px;
 }
-
 #home-container {
     text-align: center;
-    margin: 10px 40px 10px 40px;
+    margin: 1px 0px 10px 0px;
+}
+
+#home-container img {
+   -webkit-box-shadow: .3px .3px 2px 1px #292929;
+    box-shadow: .3px .3px 2px 1px #292929;
+}
+
+#home-container a {
+    margin: 0px;
+    padding: 0px;
+    background: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
 
 progress,          /* All HTML5 progress enabled browsers */
