center search text

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h1      {
     border: 3px solid #528786;
     background: #292929;
     color: white;
+    text-align: center;
     width: 100px;
     height: 20px;
     font-size: 18px;
