--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ h1      {
     width: 310px;
     height: 50px;
     text-align: center;
-    margin:5px;
+    margin:5px auto;
     display: none;
     font-size: 20px;
 }
