--- a/MiU/Week2/Rockwell_Christopher_project2/Gold/css/style.css
+++ b/MiU/Week2/Rockwell_Christopher_project2/Gold/css/style.css
@@ -76,15 +76,16 @@ h1      {
 }
 
 #cat1, #cat2, #cat3, #cat4 {
-    background: #292929;
+    background: url(../images/button2.png);
     font-weight: bold;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 22px;
-    width: 320px;
+    width: 310px;
     height: 50px;
     text-align: center;
-    margin: 3px auto 0px auto;
+    margin: 5px auto 0px auto;
     color: white;
+    text-shadow: rgba(0,0,0,0.5) -1.5px 0, rgba(0,0,0,0.3) 0 -1px, rgba(255,255,255,0.5) 0 1px, rgba(0,0,0,0.3) -1px -1px;
 }
 
 #cat1Bg, #cat2Bg, #cat3Bg, #cat4Bg {
@@ -95,7 +96,7 @@ h1      {
 #subCat1-3, #subCat2-3, #subCat3-3, #subCat4-3, #subCat1-4, #subCat2-4, #subCat3-4, #subCat4-4
 {
     background: #0d726f;
-    width: 310px;
+    width: 300px;
     height: 50px;
     text-align: center;
     margin:5px auto;
@@ -131,7 +132,7 @@ textarea:focus {
     outline-color: white;
 }
 
-.submit     {
+submit     {
     height:35px;
     font-size: 20px;
     color: white;
@@ -141,6 +142,10 @@ textarea:focus {
     margin-right: 5px;
     border-color: #0d726f;
     background: #292929;
+}
+
+#add-item #submit {
+    height: 35px;
 }
 
 select  {
@@ -273,6 +278,10 @@ a   {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
+}
+
+.button {
+    text-align: center;
 }
 
 progress,          /* All HTML5 progress enabled browsers */
