--- a/gold/css/home.css
+++ b/gold/css/home.css
@@ -8,6 +8,12 @@
 
 .ui-header .ui-title { margin-left: 1em; margin-right: 1em; }
 
+.ui-checkbox-on .ui-icon,
+.ui-radio-on .ui-icon {
+	background-color: #0d726f /*{global-active-background-color}*/; /* NOTE: this hex should match the active state color. It's repeated here for cascade */
+}
+
+
 .ui-btn-up-b, .ui-bar-b {
     border: 1px solid #07403E;
     background: #0A5957;
@@ -18,8 +24,45 @@
     background-image:         linear-gradient( #0d726f /*{b-bup-background-start}*/, #0A5957/*{b-bup-background-end}*/);
 }
 
+label.error {
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 18px;
+	color:#D9343C;
+}
+
+input.error {
+	border: 1px solid red;
+}
+
 .ui-bar-a a.ui-link:active {
   color: black;
+}
+
+#dis ul {
+    list-style-type: none;
+    padding-top: 10px;
+    margin-left: -25px;
+    margin-top: -10px;
+    font-size: 18px;
+    font-family: Tahoma, Geneva, sans-serif;
+}
+
+#sub {
+	background:-webkit-linear-gradient( #444 , #222);
+	margin: 0px -10px 0px 20px;
+	text-shadow: 0px 0px 0px #444444;
+        filter: dropshadow(color=#444444, offx=0, offy=0);
+}
+
+#sub2 {
+	background:-webkit-linear-gradient( #0d726f , #07403E);
+	margin: 0px -10px 0px 20px;
+	text-shadow: 0px 0px 0px #444444;
+        filter: dropshadow(color=#444444, offx=0, offy=0);
+}
+
+#ex {
+	padding: 10px;
 }
 
 #grid-img {
